www.wxwindows.org/Mahogany ==> mahogany.sourceforge.net

--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -5314,7 +5314,7 @@ htmladdnormallinkfoot{online docs}{../HackersGuide/index.html}
 \latex latex 
 
 \backslash 
-htmladdnormallinkfoot{Mahogany Web page}{http://www.wxwindows.org/Mahogany/docs.htm
+htmladdnormallinkfoot{Mahogany Web page}{http://mahogany.sourceforge.net/docs.htm
 l}
 \latex default 
 .
