--- a/doc/README.tex
+++ b/doc/README.tex
@@ -162,7 +162,7 @@ Intel.
 \section{Online resources}
 
 \begin{itemize}
-\item M has a homepage at \texttt{http://www.wxwindows.org/Mahogany/} 
+\item M has a homepage at \texttt{http://mahogany.sourceforge.net/} 
 \item The wxWindows homepage is \texttt{http://www.wxwindows.org/}
 \item wxGTK, the GTK port of wxWindows, is available from \texttt{http://www.wxwindows.org/dl_gtk.htm}
 \end{itemize}
