--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 Release 0.61 'Hawkins'
 -------------------------------------------------------------------------------
 
+19.01.01 VZ: serious server side searching on IMAP servers bug fixed
 16.01.01 VZ: sending mail with local MDA respects BCC
              temp mail files are not world readable any more
 15.01.01 VZ: serious bug in parsing embedded MIME message parts fixed
