1. fixed folder renaming (visual) bug 2. better handling of folder view columns widths

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+07.02.01 VZ: fixed bug with incorrect name in the folder tree after renaming
+             better handling of folder view columns widths setting
 06.02.01 VZ: scroll the msg view to the beginning when viewing a new message
 31.01.01 VZ: safety guard against expunging messages accidentally when moving
 30.01.01 VZ: made title/status bar of the message/folder view customizable
