1. fixed yet another bug with creating of all IMAP folders 2. workaround for broken IMAP servers which break the connection if the    IMAP INBOX is locked by another session (have they ever read the RFC??) 3. don't connect to IMAP server immediately after folder creation, this is    too slow 4. avoid calling mail_create() if possible - too slow, again

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+08.02.01 VZ: fixed creation of all folders from IMAP server once again
 07.02.01 VZ: fixed bug with incorrect name in the folder tree after renaming
              better handling of folder view columns widths setting
 06.02.01 VZ: scroll the msg view to the beginning when viewing a new message
