0. changed the way HeaderInfoList works: it stores the headers in initial    order (reversed msgno order) now
1. rewrote sorting code to use a translation table instead of directly sorting
   the header entries: it is now both simpler and should be more efficient
   (moving around size_t is faster than moving around big HeaderInfoImpls)

2. don't call mail_uid() any more from cclient callbacks: again, this is more
   efficient and safer - _maybe_ this fixes the bug with locking while locked

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+15.02.01 VZ: added message sorting by status and by size
 13.02.01 VZ: added an option to not open any folders at startup at all
 10.02.01 VZ: better error msg when opening POP3 folder opened from elsewhere
 09.02.01 VZ: added "Edit" button to folder filters dlg, also edit on dbl click
