0. fixed bugs in my previous commit 1. address selection dialog remembers its position 2. don't show duplicate entries in this dialog

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 Release 0.62 'Mars'
 -------------------------------------------------------------------------------
 
+16.02.01 VZ: added highlighting of folders with flagged messages in the tree
+                and a menu command to flag messages
+             don't show duplicates in the address completion dialog
 15.02.01 VZ: added message sorting by status and by size
 13.02.01 VZ: added an option to not open any folders at startup at all
 10.02.01 VZ: better error msg when opening POP3 folder opened from elsewhere
